--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c84ba6c4",
+   "id": "56465b5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3f74edf7",
+   "id": "5fc157f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "62a77d44",
+   "id": "73ea1944",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "38b2916e",
+   "id": "62b33562",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d12059a5",
+   "id": "553de3fa",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4fae197c",
+   "id": "9a0737d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cbbb1cdb",
+   "id": "09d71c5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2cfa651d",
+   "id": "9f43a4e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "600848e4",
+   "id": "5cdcd4a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7afb1623",
+   "id": "0c03d28f",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d56fe1d7",
+   "id": "ffc2c0f9",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a8069c79",
+   "id": "d5426697",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "839c149b",
+   "id": "7042698e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a8d0e3ba",
+   "id": "1504231b",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f2a2035b",
+   "id": "e4511a4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0b8d245f",
+   "id": "65a266a1",
    "metadata": {},
    "outputs": [
     {
@@ -358,13 +358,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f60440f",
+   "execution_count": 19,
+   "id": "3463e5cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = df['text'][]"
+    "text = df['text'][1500]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e1bc8c3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This wind is crampin` my style. I have a section of my yard that won`t get any water. I`d move the sprinkler, but it`s surrounded by mud.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "dc66b8e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This', 'wind', 'is', 'crampin', '`', 'my', 'style', '.', 'I', 'have']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens = nltk.word_tokenize(text)\n",
+    "tokens[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ebe8321c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('This', 'DT'),\n",
+       " ('wind', 'NN'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('crampin', 'JJ'),\n",
+       " ('`', '``'),\n",
+       " ('my', 'PRP$'),\n",
+       " ('style', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('I', 'PRP'),\n",
+       " ('have', 'VBP')]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tagged = nltk.pos_tag(tokens)\n",
+    "tagged[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "efdea89a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     C:\\Users\\DELL\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('averaged_perceptron_tagger')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a82ed24b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
